[package]
name = "mdbook-svgbob"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.0", features = ["cargo"]}
mdbook = { version = "0.4.22", default-features = false }
pulldown-cmark = {version = "0.9.2", default-features = false}
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.89"
toml_edit = { version = "0.14.4", default-features = false }
svgbob = "0.6.7"